--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -11,6 +11,8 @@
         ~/.zshenv:
         ~/.config/git:
                 path: config/git
+        ~/.config/i3:
+                path: config/i3
         ~/.config/termite:
                 path: config/termite
         ~/.config/zsh:
