--- a/config/i3/config
+++ b/config/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+font pango:sans 8
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -154,3 +154,11 @@ bindsym $mod+r mode "resize"
 bar {
         status_command i3status
 }
+
+
+# media keys
+bindsym XF86AudioRaiseVolume exec --no-startup-id systemd-cat -t volume volume "5%+"
+bindsym Mod1+XF86AudioRaiseVolume exec --no-startup-id systemd-cat -t volume volume "1%+"
+bindsym XF86AudioLowerVolume exec --no-startup-id systemd-cat -t volume volume "5%-"
+bindsym Mod1+XF86AudioLowerVolume exec --no-startup-id systemd-cat -t volume volume "1%-"
+bindsym XF86AudioMute exec --no-startup-id systemd-cat -t volume volume mute
