--- a/config/i3/config
+++ b/config/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:sans 8
+font pango:monospace 8
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -162,3 +162,11 @@ bindsym Mod1+XF86AudioRaiseVolume exec --no-startup-id systemd-cat -t volume vol
 bindsym XF86AudioLowerVolume exec --no-startup-id systemd-cat -t volume volume "5%-"
 bindsym Mod1+XF86AudioLowerVolume exec --no-startup-id systemd-cat -t volume volume "1%-"
 bindsym XF86AudioMute exec --no-startup-id systemd-cat -t volume volume mute
+
+# brightness keys
+bindsym XF86MonBrightnessDown exec --no-startup-id systemd-cat -t brightness brightness -U 5
+bindsym Mod1+XF86MonBrightnessDown exec --no-startup-id systemd-cat -t brightness brightness -U 1
+bindsym XF86MonBrightnessUp exec --no-startup-id systemd-cat -t brightness brightness -A 5
+bindsym Mod1+XF86MonBrightnessUp exec --no-startup-id systemd-cat -t brightness brightness -A 1
+
+exec /usr/bin/compton --config "$XDG_CONFIG_HOME/compton/compton.conf" -b --unredir-if-possible
